--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IsLuckyNumberIsLucky</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Is your birthday lucky!!</h1>
@@ -14,7 +15,9 @@
         <label for="lucky-number">Lucky Number:</label>
         <input type="number" id="lucky-number">
         <button id="check-number">Check Number</button>
+        <div id="output-box"></div>
     </div>
+    <script src="app.js"></script>
 </body>
-<script src="app.js"></script>
+
 </html>
